# MLCourse

./: pyproject.toml
development/: GradDec.norg  log_reg_scratch.py
notes/: index.norg
