[tool.poetry]
name = "mlcourse"
version = "0.1.0"
description = ""
authors = ["vsedov <viv.sedov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.1"
jupyterlab = "^3.4.3"
notebook = "^6.4.12"
jupytext = "^1.14.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
